<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterActivity"
    android:background="@drawable/fondo_1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="363dp"
        android:layout_height="129dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="263dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:autoLink="email"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="Ingrese su correo"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="@color/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="264dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/textnombre"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />


    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="264dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="Ingrese su contraseña"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="@color/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtRepitPassword"
        android:layout_width="264dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/textrepiteContra"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="@color/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="158dp"
        android:layout_height="54dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/btn"
        android:text="@string/btnRegistrar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.706" />

    <TextView
        android:id="@+id/txtIrLogin"
        android:layout_width="250dp"
        android:layout_height="37dp"
        android:layout_marginBottom="152dp"
        android:fontFamily="sans-serif"
        android:text="@string/textTienesCuenta"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>